# stock-analysis

./: .gitignore  README.md  docker-compose.yml  helper.py  pyproject.toml
.github/workflows/: ci.yml
consumer/: Dockerfile  consumer.py  db_manager.py
producer/: Dockerfile  producer.py
tests/: test_app.py  test_consumer.py  test_db_manager.py  test_producer.py
webapp/: Dockerfile  app.py
webapp/templates/: index.html
